# NGram-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: AdditiveSmoothingTest.c  GoodTuringSmoothingTest.c  LaplaceSmoothingTest.c  NGramTest.c  NoSmoothingTest.c  ReadCorpus.c  ReadCorpus.h
src/: AdditiveSmoothing.c  AdditiveSmoothing.h  CMakeLists.txt  GoodTuringSmoothing.c  GoodTuringSmoothing.h  InterpolatedSmoothing.c  InterpolatedSmoothing.h  LaplaceSmoothing.c  LaplaceSmoothing.h  MultipleFile.c  MultipleFile.h  NGram.c  NGram.h  NGramNode.c  NGramNode.h  NoSmoothing.c  NoSmoothing.h  NoSmoothingWithDictionary.c  NoSmoothingWithDictionary.h  NoSmoothingWithNonRareWords.c  NoSmoothingWithNonRareWords.h  TrainedSmoothing.c  TrainedSmoothing.h
